# bolt

./: CMakeLists.txt  README.md
include/bolt/: array_crtp_base.hpp  array_data.hpp  array_traits.hpp  bolt.hpp  buffer.hpp  c_interface.hpp  format.hpp  iterator.hpp  meta.hpp  value.hpp
src/: array_data.cpp  bolt.cpp  buffer.cpp
tests/: CMakeLists.txt  main.cpp  test_bolt.cpp
